--- a/index.html
+++ b/index.html
@@ -13,21 +13,28 @@
     <link rel="canonical" href="https://oms.tueng.org">
   </head>
   <body>
+<center>
     <div>
           <img src='pea-oms-logo.png'/>
     </div>
-    <div>
+    <div style="justify-content:center;">
       <div>
         <a href="pea-oms-propose-20221130.pdf">ข้อเสนอโครงการ</a>
       </div>
       <div>
-        <a href="pea-oms-propose-20221130.pdf">ประชุมเริ่มโครงการ</a>
+        <a href="meet.html">ประชุมเริ่มโครงการ</a>
       </div>
+<hr>
       <div>
         email: oms@tueng.org
+      </div>
+      <div>
         web: http://oms.tueng.org
+      </div>
+      <div>
         repo: http://box.com
       </div>
     </div>
+</center>
   </body>
 </html>
