--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <div>
         <a href="meet.html">ประชุมเริ่มโครงการ</a>
       </div>
+      <div>
+        <a href="pea-oms-kickoff-20230301a.pdf">เอกสารประกอบการประชุมเริ่มโครงการ</a>
+      </div>
+
+
 <hr>
       <div>
         email: oms@tueng.org
