--- a/ea/oms-CHM-0.3.4/index.html
+++ b/ea/oms-CHM-0.3.4/index.html
@@ -1197,8 +1197,8 @@
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-e9f2b65fecaa45e0a74fc83520d4e49f.html" target="element"> TMS - &#3588;&#3640;&#3603;&#3618;&#3634;&#3619;&#3636; Trimble </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-d50cfd17a17945eb830f4caa18a56de5.html" target="element"> JBR - Mr.Jay Briton </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-5a36961463d048acb7ba90cabee34290.html" target="element"> CYP - &#3609;&#3634;&#3618;&#3594;&#3633;&#3618;&#3614;&#3620;&#3602; &#3624;&#3624;&#3632;&#3609;&#3634;&#3609;&#3609;&#3607;&#3660; </a></li>
-													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-c067ada2ac234a4896ae73116a5617ae.html" target="element"> ONP - &#3609;&#3634;&#3591;&#3626;&#3634;&#3623;&#3629;&#3619;&#3609;&#3616;&#3634; (copy) </a></li>
-													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-65288be477004fd39f29f57f02fc1981.html" target="element"> CYP - &#3609;&#3634;&#3618;&#3594;&#3633;&#3618;&#3614;&#3620;&#3602; &#3624;&#3624;&#3632;&#3609;&#3634;&#3609;&#3609;&#3607;&#3660; (copy) </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-c067ada2ac234a4896ae73116a5617ae.html" target="element"> ONP - &#3609;&#3634;&#3591;&#3626;&#3634;&#3623;&#3629;&#3619;&#3609;&#3616;&#3634; </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-65288be477004fd39f29f57f02fc1981.html" target="element"> CYP - &#3609;&#3634;&#3618;&#3594;&#3633;&#3618;&#3614;&#3620;&#3602; &#3624;&#3624;&#3632;&#3609;&#3634;&#3609;&#3609;&#3607;&#3660; </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-6407b639922d4c958c47d5baf9bdbb45.html" target="element"> Complex System Integration Expert </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-2c4b62e863ce45b1b485f6a9f2178a11.html" target="element"> GIS - &#3610;&#3619;&#3636;&#3625;&#3633;&#3607;ESRI </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-4addbf869a0e4320aaa5aeb346b28ea3.html" target="element"> ATD - &#3588;&#3640;&#3603;&#3629;&#3634;&#3607;&#3636;&#3605;&#3618;&#3660; &#3614;&#3634;&#3609;&#3636;&#3594;&#3585;&#3634;&#3619; </a></li>
@@ -12190,11 +12190,11 @@
 													</a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-e05c741a67ff450398087a81a27d7629.html" target="element">
 															<span class="i18n-elementtype-AssignmentRelationship"></span>
-														(ONP - &#3609;&#3634;&#3591;&#3626;&#3634;&#3623;&#3629;&#3619;&#3609;&#3616;&#3634; (copy) - Project Coordinator) 
+														(ONP - &#3609;&#3634;&#3591;&#3626;&#3634;&#3623;&#3629;&#3619;&#3609;&#3616;&#3634; - Project Coordinator) 
 													</a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-5f82db6dfa024be69440ca7bc203477d.html" target="element">
 															<span class="i18n-elementtype-AssignmentRelationship"></span>
-														(CYP - &#3609;&#3634;&#3618;&#3594;&#3633;&#3618;&#3614;&#3620;&#3602; &#3624;&#3624;&#3632;&#3609;&#3634;&#3609;&#3609;&#3607;&#3660; (copy) - Project Coordinator) 
+														(CYP - &#3609;&#3634;&#3618;&#3594;&#3633;&#3618;&#3614;&#3620;&#3602; &#3624;&#3624;&#3632;&#3609;&#3634;&#3609;&#3609;&#3607;&#3660; - Project Coordinator) 
 													</a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-75d13b0f290f4b49bd587d7c648ccaf6.html" target="element">
 															<span class="i18n-elementtype-CompositionRelationship"></span>
