--- a/ea/oms-CHM-0.3.4/index.html
+++ b/ea/oms-CHM-0.3.4/index.html
@@ -1229,6 +1229,10 @@
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-7b49bfb8627f443290ad0c958e87ada2.html" target="element"> 5.&#3623;&#3634;&#3591;&#3649;&#3612;&#3609; &#3629;&#3629;&#3585;&#3649;&#3610;&#3610; &#3614;&#3633;&#3602;&#3609;&#3634; &#3619;&#3632;&#3610;&#3610;&#3591;&#3634;&#3609;&#3649;&#3621;&#3632;&#3611;&#3619;&#3633;&#3610;&#3611;&#3619;&#3640;&#3591;&#3585;&#3619;&#3632;&#3610;&#3623;&#3609;&#3591;&#3634;&#3609;&#3648;&#3614;&#3639;&#3656;&#3629;&#3648;&#3614;&#3636;&#3656;&#3617;&#3611;&#3619;&#3632;&#3626;&#3636;&#3607;&#3608;&#3636;&#3616;&#3634;&#3614;&#3649;&#3621;&#3632;&#3619;&#3629;&#3591;&#3619;&#3633;&#3610;&#3588;&#3623;&#3634;&#3617;&#3605;&#3657;&#3629;&#3591;&#3585;&#3634;&#3619;&#3604;&#3657;&#3634;&#3609;&#3604;&#3636;&#3592;&#3636;&#3607;&#3633;&#3621;&#3586;&#3629;&#3591;&#3629;&#3591;&#3588;&#3660;&#3585;&#3619; </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-fe7dfcc26c614cf892f733e085f55299.html" target="element"> 2. &#3623;&#3634;&#3591;&#3649;&#3612;&#3609;&#3649;&#3621;&#3632;&#3592;&#3633;&#3604;&#3585;&#3634;&#3619;&#3619;&#3632;&#3610;&#3610;&#3591;&#3634;&#3609;&#3626;&#3634;&#3619;&#3626;&#3609;&#3648;&#3607;&#3624;&#3607;&#3637;&#3656;&#3629;&#3618;&#3641;&#3656;&#3651;&#3609;&#3588;&#3623;&#3634;&#3617;&#3604;&#3641;&#3649;&#3621;&#3651;&#3627;&#3657;&#3604;&#3635;&#3648;&#3609;&#3636;&#3609;&#3591;&#3634;&#3609;&#3652;&#3611;&#3629;&#3618;&#3656;&#3634;&#3591;&#3617;&#3637;&#3611;&#3619;&#3632;&#3626;&#3636;&#3607;&#3608;&#3636;&#3616;&#3634;&#3614; </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-5587c29fa3594b2ab14875271f59c291.html" target="element"> 6. &#3607;&#3604;&#3626;&#3629;&#3610;&#3619;&#3632;&#3610;&#3610;&#3591;&#3634;&#3609;&#3607;&#3637;&#3656;&#3629;&#3629;&#3585;&#3649;&#3610;&#3610;&#3649;&#3621;&#3632;&#3614;&#3633;&#3602;&#3609;&#3634; &#3649;&#3621;&#3632;&#3592;&#3633;&#3604;&#3607;&#3635;&#3648;&#3629;&#3585;&#3626;&#3634;&#3619;&#3588;&#3641;&#3656;&#3617;&#3639;&#3629;&#3619;&#3632;&#3610;&#3610; &#3588;&#3641;&#3656;&#3617;&#3639;&#3629;&#3585;&#3634;&#3619;&#3651;&#3594;&#3657;&#3591;&#3634;&#3609;&#3586;&#3629;&#3591;&#3619;&#3632;&#3610;&#3610;&#3591;&#3634;&#3609;&#3607;&#3637;&#3656;&#3614;&#3633;&#3602;&#3609;&#3634;/&#3611;&#3619;&#3633;&#3610;&#3611;&#3619;&#3640;&#3591; &#3605;&#3621;&#3629;&#3604;&#3592;&#3609;&#3648;&#3629;&#3585;&#3626;&#3634;&#3619;&#3607;&#3637;&#3656;&#3648;&#3585;&#3637;&#3656;&#3618;&#3623;&#3586;&#3657;&#3629;&#3591; </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-f12b8cd6fef84f10bb0f16988bff0843.html" target="element"> CHM - &#3604;&#3619;.&#3594;&#3640;&#3617;&#3614;&#3621; &#3610;&#3640;&#3597;&#3617;&#3637; (copy) </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-c8afcf8a22084fa08adf38af248d7aa8.html" target="element"> CHY - &#3612;&#3624;.&#3604;&#3619;.&#3652;&#3594;&#3618;&#3618;&#3633;&#3609;&#3605;&#3660; &#3610;&#3640;&#3597;&#3617;&#3637; (copy) </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-60aacac5b9814228bf39ec54ff73343c.html" target="element"> SCO - Dr.Scott Coe (copy) </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-ae6d9ea40f9141bdb6fe8999f9e0fb1f.html" target="element"> SNM - Mr.Scott Newmann (copy) </a></li>
 
 									</ul>
 								</li>
@@ -1812,7 +1816,7 @@
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-75052c0c83884f5cbdb2c8f4ff334cb0.html" target="element">    23 Feb 2023 : &#3604;&#3641;&#3591;&#3634;&#3609; &#3585;&#3615;&#3615; &#3611;&#3607;&#3640;&#3617;&#3608;&#3634;&#3609;&#3637; 2 </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-e5abdfb76c644f2696814e953cf4ba2a.html" target="element">    24 Feb 2023 : Standup Meeting </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-11fcb23d8fbb45a4b0994c43ec3c0d5e.html" target="element">    24 Feb 2023 : &#3623;&#3636;&#3648;&#3588;&#3619;&#3634;&#3632;&#3627;&#3660; &#3586;&#3657;&#3629;&#3617;&#3641;&#3621;&#3626;&#3606;&#3636;&#3605;&#3636; </a></li>
-													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-1efb8c4cb3ff4391bf13a231335cec06.html" target="element">    24 Feb 2023 : &#3623;&#3636;&#3648;&#3588;&#3619;&#3634;&#3632;&#3627;&#3660;&#3651;&#3627;&#3617;&#3656; SE </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-1efb8c4cb3ff4391bf13a231335cec06.html" target="element">    24 Feb 2023 : &#3623;&#3636;&#3648;&#3588;&#3619;&#3634;&#3632;&#3627;&#3660;&#3612;&#3621;&#3636;&#3605;&#3616;&#3633;&#3603;&#3601;&#3660; SE </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-3e15999082fe4df2b6dbb74ad221c0be.html" target="element">    27 Feb 2023 : &#3623;&#3636;&#3648;&#3588;&#3619;&#3634;&#3632;&#3627;&#3660;&#3585;&#3634;&#3619;&#3648;&#3594;&#3639;&#3656;&#3629;&#3617;&#3650;&#3618;&#3591; </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-da60ce6998f443298186a3bb3f64bccf.html" target="element">    28 Feb 2023 : Standup Meeting </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-55a99ef9fc4b4c99bef4168cb6f2c7b4.html" target="element">    28 Feb 2023 : &#3619;&#3632;&#3610;&#3610;&#3619;&#3634;&#3618;&#3591;&#3634;&#3609; &#3588;&#3640;&#3603;&#3629;&#3617;&#3619; </a></li>
@@ -1994,8 +1998,12 @@
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-4ae6684178ae4793825869a05b38715e.html" target="element"> &#3649;&#3609;&#3623;&#3607;&#3634;&#3591;&#3611;&#3619;&#3633;&#3610;&#3611;&#3619;&#3640;&#3591;&#3586;&#3657;&#3629;&#3585;&#3635;&#3627;&#3609;&#3604; </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-c1394266c49b488f9fb64fc225687646.html" target="element"> 17 Apr 2023 : &#3611;&#3619;&#3632;&#3594;&#3640;&#3617;&#3649;&#3609;&#3623;&#3607;&#3634;&#3591;&#3585;&#3634;&#3619;&#3648;&#3594;&#3639;&#3656;&#3629;&#3617;&#3650;&#3618;&#3591; </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-6f22e33e2f0849998eb4c6ab45eff39b.html" target="element"> &#3617;&#3634;&#3605;&#3619;&#3600;&#3634;&#3609; CIM (970+968) </a></li>
-													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-021c08bc672c4dc69ff9c18618995937.html" target="element"> 25 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-021c08bc672c4dc69ff9c18618995937.html" target="element"> 26 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-2b2cddc1c6b843ffaffce0fed00a07c6.html" target="element"> &#3649;&#3609;&#3623;&#3607;&#3634;&#3591;&#3585;&#3634;&#3619; workshop </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-48289de5d28f40a2a6fefb23f720d030.html" target="element"> 27 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-456675f898cb48f2bcb73724c6cb868c.html" target="element"> &#3585;&#3619;&#3632;&#3610;&#3623;&#3609;&#3591;&#3634;&#3609; OMS </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-784e2aa2a4244876a1ae988df6c079f6.html" target="element"> 28 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-fe41e206bc724910b148f742ec623b49.html" target="element"> &#3585;&#3619;&#3632;&#3610;&#3623;&#3609;&#3591;&#3634;&#3609; OMS </a></li>
 
 									</ul>
 								</li>
@@ -6154,7 +6162,7 @@
 													</a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-fc6757b516d646108d0fc4cbda89072a.html" target="element">
 															<span class="i18n-elementtype-AccessRelationship"></span>
-														(   24 Feb 2023 : &#3623;&#3636;&#3648;&#3588;&#3619;&#3634;&#3632;&#3627;&#3660;&#3651;&#3627;&#3617;&#3656; SE - License : DMD,WebDMD, Field client) 
+														(   24 Feb 2023 : &#3623;&#3636;&#3648;&#3588;&#3619;&#3634;&#3632;&#3627;&#3660;&#3612;&#3621;&#3636;&#3605;&#3616;&#3633;&#3603;&#3601;&#3660; SE - License : DMD,WebDMD, Field client) 
 													</a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-0ed6be9ac8cf412cabb5cbebc79f8700.html" target="element">
 															<span class="i18n-elementtype-AccessRelationship"></span>
@@ -12122,7 +12130,7 @@
 													</a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-1ca2645b14c54570914ca96a5bbb4dff.html" target="element">
 															<span class="i18n-elementtype-AccessRelationship"></span>
-														(25 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 - &#3649;&#3609;&#3623;&#3607;&#3634;&#3591;&#3585;&#3634;&#3619; workshop) 
+														(26 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 - &#3649;&#3609;&#3623;&#3607;&#3634;&#3591;&#3585;&#3634;&#3619; workshop) 
 													</a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-7e10d08140db44c198e1a4558f91855a.html" target="element">
 															<span class="i18n-elementtype-AssignmentRelationship"></span>
@@ -12367,6 +12375,14 @@
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-7a6efac4b3544fb1a48ba5028303debe.html" target="element">
 															<span class="i18n-elementtype-CompositionRelationship"></span>
 														(OMS functionality - ERP Integration) 
+													</a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-a642edff61b740a0ae017e0431c71ec1.html" target="element">
+															<span class="i18n-elementtype-AccessRelationship"></span>
+														(27 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 - &#3585;&#3619;&#3632;&#3610;&#3623;&#3609;&#3591;&#3634;&#3609; OMS) 
+													</a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/elements/id-20949a229a0e475e94f2b3d42e352d8d.html" target="element">
+															<span class="i18n-elementtype-AccessRelationship"></span>
+														(28 Apr 2023 : &#3648;&#3605;&#3619;&#3637;&#3618;&#3617;&#3585;&#3634;&#3619; workshop #2 - &#3585;&#3619;&#3632;&#3610;&#3623;&#3609;&#3591;&#3634;&#3609; OMS) 
 													</a></li>
 
 									</ul>
@@ -12682,6 +12698,7 @@
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/views/id-94bb4854db7b4d37876d49a2a3cfdc48.html" target="view"> 00-Wk-Road </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/views/id-3b86a8b4bff24de68b2bc948c46c2971.html" target="view"> 07-Wk-Apr18 </a></li>
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/views/id-10c098a252324c7dba01f648cdc0115d.html" target="view"> 08-Wk-Apr25 </a></li>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/views/id-6ac1223666bb49c89c417ffad0a53f1f.html" target="view"> 09-Wk-May </a></li>
 
 									</ul>
 									</li><li class="tree-folder "><span><i class="glyphicon glyphicon-triangle-right"></i> 12-DOC-inp </span>
