--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       <div>
         <a href="pea-oms-kickoff-20230301a.pdf">เอกสารประกอบการประชุมเริ่มโครงการ</a>
       </div>
+      <div>
+        <a href="ea/">Project EA</a>
+      </div>
+      <div>
+        <a href="pea-oms-20230808.pdf">เอกสารรายงานความก้าวหน้าประจำเดือน ครั้งที่ 6</a>
+      </div>
 
 
 <hr>
