--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <a href="ea/">Project EA</a>
       </div>
       <div>
+        <a href="ea/">Draft TOR for OMS</a>
+      </div>
+      <div>
         <a href="pea-oms-20230808.pdf">เอกสารรายงานความก้าวหน้าประจำเดือน ครั้งที่ 6</a>
       </div>
 
