--- a/ea/oms-0.4.0/index.html
+++ b/ea/oms-0.4.0/index.html
@@ -19444,6 +19444,11 @@
 													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/views/id-29a0cd1eb3f14510a35ebacc0919f48c.html" target="view"> 06.ORG-ICT-JD </a></li>
 
 									</ul>
+									</li><li class="tree-folder "><span><i class="glyphicon glyphicon-triangle-right"></i> 03-PEA-EXC </span>
+									<ul>
+													<li class="tree-element "><a href="id-c453f2394ba3431ba1266d5a59673d55/views/id-bc70e302f12744679955086939ed6f6e.html" target="view"> 01-EX-GIS </a></li>
+
+									</ul>
 									</li>
 							</ul>
 						</li>
